Aggregating docs/descriptors : Release - 2020.0.0-M2

--- a/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/index.adoc
+++ b/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/index.adoc
@@ -35,8 +35,8 @@ endif::backend-html5[]
 = Reference Guide
 include::overview.adoc[]
 
-[[starters]]
-= Starters
+[[applications]]
+= Applications
 include::sources.adoc[]
 
 include::processors.adoc[]
