Remove deprecated spring.cloud.stream.function.definition property

--- a/applications/sink/twitter-update-sink/README.adoc
+++ b/applications/sink/twitter-update-sink/README.adoc
@@ -38,6 +38,6 @@ $$twitter.update.text$$:: $$(SpEL expression) The text of the text update. URL e
 Use `@Import(TwitterUpdateConsumerConfiguration.class)` to compose those functions.
 
 By default the `twitter-update` implements the following composite function chain:
-`spring.cloud.stream.function.definition=byteArrayTextToString|messageToStatusUpdateFunction|updateStatus` or (`byteArrayTextToString|twitterStatusUpdateConsumer`)
+`spring.cloud.function.definition=byteArrayTextToString|messageToStatusUpdateFunction|updateStatus` or (`byteArrayTextToString|twitterStatusUpdateConsumer`)
 
 
