--- a/applications/processor/filter-processor/README.adoc
+++ b/applications/processor/filter-processor/README.adoc
@@ -4,7 +4,7 @@
 Filter processor enables an application to examine the incoming payload and then applies a predicate against it which decides if the record needs to be continued.
 For example, if the incoming payload is of type `String` and you want to filter out anything that has less than five characters, you can run the filter processor as below.
 
-`java -jar filter-processor-kafka-<version>.jar --spel.function.expression=payload.length() > 4`
+`java -jar filter-processor-kafka-<version>.jar --filter.function.expression=payload.length() > 4`
 
 Change kafka to rabbit if you want to run it against RabbitMQ.
 
@@ -16,7 +16,7 @@ If the incoming type is `byte[]` and the content type is set to `text/plain` or 
 == Options
 
 //tag::configuration-properties[]
-$$spel.function.expression$$:: $$A SpEL expression to apply.$$ *($$String$$, default: `$$<none>$$`)*
+$$filter.function.expression$$:: $$A SpEL expression to apply.$$ *($$String$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 //end::ref-doc[]
